# homeboy-core

./: .gitignore  .phpunit.result.cache  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  homeboy.json  storage-system-decoupling-plan.md
.claude/commands/: version-bump.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.homeboy/: audit-baseline.json
agent-instructions/: README.md  version-bump.md
agent-instructions/commands/: homeboy-init.md  version-bump.md
crates/homeboy/: Cargo.toml
crates/homeboy-cli/: Cargo.toml  build.rs
crates/homeboy-core/: Cargo.toml
crates/homeboy-core/src/: api.rs  base_path.rs  build.rs  changelog.rs  context.rs  deploy.rs  doctor.rs  error.rs  git.rs  http.rs  json.rs  keychain.rs  lib.rs  module.rs  shell.rs  template.rs  tty.rs  version.rs
crates/homeboy-core/src/config/: app.rs  component.rs  config_keys.rs  identifiable.rs  importable.rs  mod.rs  module_config.rs  paths.rs  project.rs  project_id.rs  project_manager.rs  project_type.rs  server.rs
crates/homeboy-core/src/output/: response.rs
crates/homeboy-core/src/plugin/: manifest.rs  mod.rs
crates/homeboy-core/src/prompt/: mod.rs  types.rs
crates/homeboy-core/src/ssh/: client.rs
crates/homeboy-core/tests/: module_settings.rs  output_errors.rs
crates/homeboy-error/: Cargo.toml
crates/homeboy/src/: api.rs  base_path.rs  build.rs  changelog.rs  cli_tool.rs  component.rs  config.rs  context.rs  db.rs  deploy.rs  files.rs  git.rs  http.rs  json.rs  keychain.rs  lib.rs  local_files.rs  logs.rs  main.rs  module.rs  module_settings.rs  project.rs  server.rs  shell.rs  template.rs  tty.rs  version.rs
crates/homeboy/src/commands/: api.rs  auth.rs  build.rs  changelog.rs  cli.rs  component.rs  config.rs  context.rs  db.rs  deploy.rs  docs.rs  doctor.rs  error.rs  file.rs  git.rs  logs.rs  mod.rs  module.rs  pin.rs  plugin.rs  pm2.rs  project.rs  projects.rs  server.rs  ssh.rs  version.rs  wp.rs
crates/homeboy/src/config/: component.rs  identifiable.rs  importable.rs  mod.rs  module_config.rs  paths.rs  project.rs  project_id.rs  project_manager.rs  record.rs  server.rs
crates/homeboy/src/docs/: mod.rs
crates/homeboy/src/error/: codes.rs  help.rs  mod.rs
crates/homeboy/src/output/: response.rs
crates/homeboy/src/ssh/: client.rs
crates/homeboy/tests/: module_settings.rs  output_errors.rs
docs/: architecture.md  changelog.md  cli-reference.md  code-factory.md  component.md  cross-compilation.md  db.md  deploy.md  file.md  git.md  index.md  logs.md  module.md  pin.md  pm2.md  server.md  ssh.md  templates.md  wp.md
docs/architecture/: api-client.md  ci-results-contract.md  core-runner-output-parse.md  embedded-docs-topic-resolution.md  execution-context.md  hooks.md  keychain-secrets.md  output-system.md  release-pipeline.md  rig-matrix-axis-composition.md  runner-connection.md  runner-contract.md  scope-model.md  trace-probes.md
docs/audit/: dead-guard.md  deprecation-age.md  repeated-literal-shape.md  shared-scaffolding.md
docs/cli/: homeboy-root-command.md
docs/commands/: api.md  audit-issues.md  audit-rules.md  audit.md  auth.md  bench.md  build.md  cargo.md  changelog.md  changes.md  commands-index.md  component.md  config.md  context.md  daemon.md  db.md  deploy.md  deps.md  docs.md  doctor.md  extension.md  file.md  fleet.md  git.md  homeboy-init.md  http.md  init.md  issues.md  lint.md  list.md  logs.md  module.md  observe.md  plugin.md  pm2.md  project.md  refactor.md  release.md  report.md  review.md  (+17 more)
docs/developer-guide/: architecture-overview.md  config-directory.md  error-handling.md
docs/documentation/: alignment.md  generation.md  structure.md
docs/embedded-docs/: embedded-docs-topic-resolution.md
docs/json-output/: json-output-contract.md
docs/schemas/: component-schema.md  extension-manifest-schema.md  module-manifest-schema.md  portable-config.md  project-schema.md  server-schema.md
homeboy-observations/: findings.json  manifest.json  runs.json
plugins/nodejs/: homeboy.json
plugins/wordpress/: homeboy.json
skills/homeboy/: SKILL.md
src/: cli_surface.rs  lib.rs  main.rs  test_support.rs
src/commands/: api.rs  args.rs  audit.rs  audit_issues.rs  auth.rs  bench.rs  build.rs  changelog.rs  changes.rs  cleanup.rs  cli.rs  component.rs  config.rs  daemon.rs  db.rs  deploy.rs  deploy_validation.rs  deps.rs  docs.rs  doctor.rs  extension.rs  file.rs  fleet.rs  git.rs  http.rs  init.rs  issues.rs  lint.rs  logs.rs  mod.rs  module.rs  observe.rs  project.rs  refactor.rs  refactor_tests.rs  (+22 more)
tests/: architecture_core_agnostic_test.rs  command_surface_test.rs  core_agnostic_test.rs  deps_test.rs  extension_install_for_component_test.rs  file_test.rs  report_failure_digest_test.rs  self_checks_test.rs  test_support.rs
(+895 files in other folders)
