[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.18"
edition = "2021"
license = "MIT"
authors = ["Chris Huber <chubes@extrachill.com>"]

[workspace.dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
