[package]
name = "homeboy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for Homeboy CLI"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dirs = "6.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
