[package]
name = "homeboy-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for Homeboy CLI"

[dependencies]
homeboy-error = { path = "../homeboy-error" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dirs = "6.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
shellexpand = "3.1"
regex = "1.11"
zip = "0.6"

[dev-dependencies]
tempfile = "3.14"
