[package]
name = "homeboy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for development and deployment automation"

[[bin]]
name = "homeboy"
path = "src/main.rs"

[dependencies]
homeboy-core = { path = "../homeboy-core" }
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
shellexpand = "3.1"
uuid.workspace = true
atty = "0.2"
