[package]
name = "homeboy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for development and deployment automation"
repository = "https://github.com/Extra-Chill/homeboy-cli"
homepage = "https://github.com/Extra-Chill/homeboy-cli"
build = "build.rs"

[[bin]]
name = "homeboy"
path = "src/main.rs"

[dependencies]
homeboy-core = { path = "../homeboy-core" }
homeboy-error = { path = "../homeboy-error" }
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
shellexpand = "3.1"
uuid.workspace = true
atty = "0.2"
regex = "1"
arboard = "3"

[dev-dependencies]
tempfile = "3.14"
zip = "0.6"
